Изменена структура проекта

--- a/UpaProject/App.config
+++ b/UpaProject/App.config
@@ -6,14 +6,17 @@
     <sectionGroup name="usersettings" type="System.Configuration.UsersettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
       <section name="UpaProject.Properties.settings" type="System.Configuration.ClientsettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
     </sectionGroup>
-    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
       <section name="UpaProject.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
     </sectionGroup>
   </configSections>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
   </startup>
-  <connectionStrings><add name="UPAOborotEntities1" connectionString="metadata=res://*/DataFilesApp.Model1.csdl|res://*/DataFilesApp.Model1.ssdl|res://*/DataFilesApp.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=АДМИН\SQLEXPRESS;initial catalog=UPAOborot;integrated security=True;MultipleActiveResultsets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /><add name="UPAOborotEntities" connectionString="metadata=res://*/DataFilesApp.Model1.csdl|res://*/DataFilesApp.Model1.ssdl|res://*/DataFilesApp.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=АДМИН\SQLEXPRESS;initial catalog=UPAOborot;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+  <connectionStrings>
+    <add name="UPAOborotEntities1" connectionString="metadata=res://*/DataFilesApp.Model1.csdl|res://*/DataFilesApp.Model1.ssdl|res://*/DataFilesApp.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=АДМИН\SQLEXPRESS;initial catalog=UPAOborot;integrated security=True;MultipleActiveResultsets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="UPAOborotEntities" connectionString="metadata=res://*/Models.DataFilesApp.Model1.csdl|res://*/Models.DataFilesApp.Model1.ssdl|res://*/Models.DataFilesApp.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=АДМИН\SQLEXPRESS;initial catalog=UPAOborot;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
     <providers>
