Подготовка проекта к доработке

--- a/UpaProject/App.config
+++ b/UpaProject/App.config
@@ -16,6 +16,7 @@
   <connectionStrings>
     <add name="UPAOborotEntities1" connectionString="metadata=res://*/DataFilesApp.Model1.csdl|res://*/DataFilesApp.Model1.ssdl|res://*/DataFilesApp.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=АДМИН\SQLEXPRESS;initial catalog=UPAOborot;integrated security=True;MultipleActiveResultsets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     <add name="UPAOborotEntities" connectionString="metadata=res://*/Models.DataFilesApp.Model1.csdl|res://*/Models.DataFilesApp.Model1.ssdl|res://*/Models.DataFilesApp.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=АДМИН\SQLEXPRESS;initial catalog=UPAOborot;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="UpaDBEntities" connectionString="metadata=res://*/Models.DataFilesApp.Model1.csdl|res://*/Models.DataFilesApp.Model1.ssdl|res://*/Models.DataFilesApp.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=АДМИН\SQLEXPRESS;initial catalog=UpaDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
