Создано окно авторизации пользователей. Закончена реализация функции ведения данных по складам

--- a/UpaProject/App.config
+++ b/UpaProject/App.config
@@ -42,3 +42,5 @@
     </UpaProject.Properties.Settings>
   </userSettings>
 </configuration>
+<!--АДМИН\\SQLEXPRESS-->
+<!--VGZGRKBUITEX01\\SQLSERVER-->
