Реализована функция внесения записи в оперативный журнал. Добавлен журнал входа. Обновлена страница авторизации

--- a/UpaProject/App.config
+++ b/UpaProject/App.config
@@ -39,6 +39,9 @@
       <setting name="ConnectionString" serializeAs="String">
         <value>"Data Source=АДМИН\\SQLEXPRESS;Initial Catalog=UPAOborot;Integrated Security=True"</value>
       </setting>
+      <setting name="LastLogin" serializeAs="String">
+        <value />
+      </setting>
     </UpaProject.Properties.Settings>
   </userSettings>
 </configuration>
