--- a/UpaProject/UpaProject.csproj
+++ b/UpaProject/UpaProject.csproj
@@ -127,6 +127,9 @@
     <Compile Include="Models\DataFilesApp\Place.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\DataFilesApp\Place_MTR.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\DataFilesApp\PromActivites.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
@@ -149,9 +152,6 @@
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\DataFilesApp\SystemsAsu.cs">
-      <DependentUpon>Model1.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Models\DataFilesApp\SystemsAsu_Tags.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\DataFilesApp\Users.cs">
